--- a/assets/jade/_mixins.jade
+++ b/assets/jade/_mixins.jade
@@ -9,7 +9,7 @@ mixin head(titleText, links, keywords, description)
   meta(name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width")
   //- each ls in links
     link(rel="stylesheet", href=ls)  
-  link(rel="stylesheet", href="assets/css/_style.css")
+  link(rel="stylesheet", href="assets/css/style.css")
   //link(rel="icon", type="image/png", href="favicon.png")
   
 
