--- a/assets/css/style.less
+++ b/assets/css/style.less
@@ -42,13 +42,13 @@
 // PALLETE ALTERNATIVE
 @requerimientos: #FC4174;
 @proveedor: #F57225;
-@transformacion: #7FCE52;
+@transformacion: #65A542;
 @catalogo: #83729e;
 @baja: #2699F1;
-@inventario: #4DCDFE;
+@inventario: #3DA3CB;
 @relacion: #63BA97;
 @inspeccion: #953A8D;
-
+@datos: #999;
 
 
 
