--- a/assets/jade/baja.jade
+++ b/assets/jade/baja.jade
@@ -3,13 +3,14 @@ include _mixins.jade
 
 ons-page.baja
   +ons-toolbar('Baja de equipo')
-  ons-bottom-toolbar(modifier="transparent").text-right.pageAction
-    button(type="button", onclick="alert('Realizar transformación');").mdl-button.mdl-js-button
-      ons-icon(icon="ion-ios-paperplane")
-      |  Guardar
+  form(action="#", ng-controller="BajaCtrl")
+    ons-bottom-toolbar(modifier="transparent").text-right.pageAction
+      button(type="button", ng-click="save()").mdl-button.mdl-js-button
+        ons-icon(icon="ion-ios-paperplane")
+        |  Guardar
 
 
-  form(action="#")
+  
     
     ons-row
       .titulo
@@ -18,10 +19,11 @@ ons-page.baja
     .m10
       ons-row
         ons-col: +input('folioSitio', 'Folio sitio')
-        ons-col: +input('folioScope', 'Folio SCOPE')
+        //ons-col: +input('folioScope', 'Folio SCOPE')
         ons-col: +input('fecha', 'Fecha', 'date')
+        ons-col
       ons-row
-        ons-col: +input('sitio', 'Sitio', 'text', 'db_sitios.html')
+        ons-col: +input('sitio', 'Sitio', 'text', 'lateral_db_sitios.html')
         ons-col
         ons-col
       hr
@@ -37,34 +39,35 @@ ons-page.baja
             tr
               th Cantidad
               th Clave
-              th Descripción
               th Motivo
               th.addButton(ng-controller="AddItemDialogController")
                 button(type="button", ng-click="show('addItem.html')").mdl-button.mdl-js-button.mdl-button--fab.mdl-js-ripple-effect.mdl-button--colored
                   ons-icon(icon="ion-plus-round")
-          tbody
-            tr
-              td 1
-              td 1023
-              td Descripción del equipo
-              td Motivo de la baja del equipo
-              td: a(href="#"): ons-icon(icon="ion-close-round")
+          tbody(ng-controller="TableCtrl")
+            tr(ng-repeat="item in items track by $index")
+              td: input(ng-model="campos.elemento[$index].cantidad", ng-init="campos.elemento[$index].cantidad=item.cantidad").mdl-textfield__input
+              td: input(ng-model="campos.elemento[$index].clave", ng-init="campos.elemento[$index].clave=item.clave").mdl-textfield__input
+              td: input(ng-model="campos.elemento[$index].motivo", ng-init="campos.elemento[$index].motivo=item.motivo").mdl-textfield__input
+              td: a(href="#", ng-click="removeItem($index)"): ons-icon(icon="ion-close-round")
 
 
 ons-template(id="addItem.html")
-  ons-dialog(var="addItemDialog" cancelable)
+  ons-dialog(var="addItemDialog" cancelable).baja
     ons-toolbar(inline)
       .center Añadir nuevo
-    .m10.baja
+    form(action="#", ng-controller="DialogCtrl", ng-submit="submit()").m10.baja
       p Datos del equipo
       ons-row
         ons-col: +input('cantidad', 'Cantidad')
-        ons-col: +input('clave', 'Clave')
-        ons-col: +input('descripcion', 'Descripción de equipo')
+        ons-col: +input('clave', 'Clave', 'text', 'lateral_db_catalogos.html')
       ons-row
         ons-col: +input('motivo', 'Motivo de la baja') 
       ons-row
         ons-col.text-center
           button(type="button", ng-click="addItemDialog.hide()").mdl-button.mdl-js-button.mdl-button--colored
+            ons-icon(icon="ion-close")
+            |  Cancelar
+        ons-col.text-center
+          button(type="submit", ng-click="addItemDialog.hide()").mdl-button.mdl-js-button.mdl-button--colored
             ons-icon(icon="ion-plus-round")
             |  Añadir elemento
