--- a/assets/jade/inspeccion.jade
+++ b/assets/jade/inspeccion.jade
@@ -3,13 +3,11 @@ include _mixins.jade
 
 ons-page.inspeccion
   +ons-toolbar('Inspección de la obra')
-  ons-bottom-toolbar(modifier="transparent").text-right.pageAction
-    button(type="button", onclick="alert('Realizar transformación');").mdl-button.mdl-js-button
-      ons-icon(icon="ion-ios-paperplane")
-      |  Guardar
-
-
-  form(action="#")
+  form(action="#", ng-controller="InspeccionCtrl")
+    ons-bottom-toolbar(modifier="transparent").text-right.pageAction
+      button(type="button", ng-click="save()").mdl-button.mdl-js-button
+        ons-icon(icon="ion-ios-paperplane")
+        |  Guardar
     
     ons-row
       .titulo
@@ -17,11 +15,11 @@ ons-page.inspeccion
          |  Información
     .m10
       ons-row
+        //ons-col: +input('folioScope', 'Folio SCOPE')
         ons-col: +input('folioSitio', 'Folio sitio')
-        ons-col: +input('folioScope', 'Folio SCOPE')
         ons-col: +input('fecha', 'Fecha', 'date')
       ons-row
-        ons-col: +input('sitio', 'Sitio', 'text', 'db_sitios.html')
+        ons-col: +input('sitio', 'Sitio', 'text', 'lateral_db_sitios.html')
         ons-col
         ons-col
       hr
@@ -34,30 +32,26 @@ ons-page.inspeccion
         table.mdl-data-table.mdl-js-data-table
           thead
             tr
-              th Cantidad
-              th Clave
-              th Descripción
-              th Motivo
+              th Captura
+              th Observaciones
               th.addButton(ng-controller="AddItemDialogController")
                 button(type="button", ng-click="show('addItem.html')").mdl-button.mdl-js-button.mdl-button--fab.mdl-js-ripple-effect.mdl-button--colored
                   ons-icon(icon="ion-plus-round")
-          tbody
-            tr
-              td 1
-              td 1023
-              td Descripción del equipo
-              td Motivo de la baja del equipo
-              td: a(href="#"): ons-icon(icon="ion-close-round")
+          tbody(ng-controller="TableCtrl")
+            tr(ng-repeat="item in items track by $index")
+              td: input(ng-model="campos.elemento[$index].captura", ng-init="campos.elemento[$index].cantidad=item.cantidad").mdl-textfield__input 
+              td: input(ng-model="campos.elemento[$index].observaciones", ng-init="campos.elemento[$index].observaciones=item.observaciones").mdl-textfield__input 
+              td: a(href="#", ng-click="removeItem($index)"): ons-icon(icon="ion-close-round")
 
 ons-template(id="addItem.html")
-  ons-dialog(var="addItemDialog" cancelable)
+  ons-dialog(var="addItemDialog" cancelable).inspeccion
     ons-toolbar(inline)
       .center Añadir nuevo
-    .m10.inspeccion
+    form(action="#", ng-controller="DialogCtrl", ng-submit="submit()").m10.inspeccion
       p Captura o selección de imagen
       ons-row
         ons-col.text-center
-          button(type="button", ng-click="alert('Tomar foto');").mdl-button.mdl-js-button.mdl-button--fab.mdl-js-ripple-effect.mdl-button--colored
+          button(type="button", ng-click="camera()").mdl-button.mdl-js-button.mdl-button--fab.mdl-js-ripple-effect.mdl-button--colored
             ons-icon(icon="ion-camera")
       p Información
       ons-row
@@ -65,5 +59,9 @@ ons-template(id="addItem.html")
       ons-row
         ons-col.text-center
           button(type="button", ng-click="addItemDialog.hide()").mdl-button.mdl-js-button.mdl-button--colored
+            ons-icon(icon="ion-close")
+            |  Cancelar
+        ons-col.text-center
+          button(type="submit", ng-click="addItemDialog.hide()").mdl-button.mdl-js-button.mdl-button--colored
             ons-icon(icon="ion-plus-round")
             |  Añadir elemento
