--- a/assets/jade/transformacion.jade
+++ b/assets/jade/transformacion.jade
@@ -3,14 +3,12 @@ include _mixins.jade
 ons-navigator(title="Elegir opción", var="autocomplete")
   ons-page.transformacion
     +ons-toolbar('Transformación')
-    ons-bottom-toolbar(modifier="transparent").text-right.pageAction
-      button(type="button", onclick="alert('Realizar transformación');").mdl-button.mdl-js-button
-        ons-icon(icon="ion-ios-paperplane")
-        |  Guardar
-  
-  
-    form(action="#")
-      
+    form(action="#", ng-controller="TransformacionCtrl")
+
+      ons-bottom-toolbar(modifier="transparent").text-right.pageAction
+        button(type="button", ng-click="save()").mdl-button.mdl-js-button
+          ons-icon(icon="ion-ios-paperplane")
+          |  Guardar      
       ons-row
         .titulo
            ons-icon(icon="ion-ios-arrow-right")
@@ -18,10 +16,11 @@ ons-navigator(title="Elegir opción", var="autocomplete")
       .m10
         ons-row
           ons-col: +input('folioSitio', 'Folio sitio')
-          ons-col: +input('folioScope', 'Folio SCOPE')
+          //ons-col: +input('folioScope', 'Folio SCOPE')
           ons-col: +input('fecha', 'Fecha', 'date')
+          ons-col
         ons-row
-          ons-col: +input('sitio', 'Sitio', 'text', 'db_sitios.html')
+          ons-col: +input('sitio', 'Sitio', 'text', 'lateral_db_sitios.html')
           ons-col
           ons-col
         hr
@@ -42,38 +41,42 @@ ons-navigator(title="Elegir opción", var="autocomplete")
                 th Clave
                 th Cantidad
                 th Clave
-                th Descripción
+                th Comentario
                 th.addButton(ng-controller="AddItemDialogController")
                   button(type="button", ng-click="show('addItem.html')").mdl-button.mdl-js-button.mdl-button--fab.mdl-js-ripple-effect.mdl-button--colored
                     ons-icon(icon="ion-plus-round")
-            tbody
-              tr
-                td 1
-                td 1023
-                td 1
-                td 19385
-                td  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Omnis incidunt vel consequuntur.
-                td: a(href="#"): ons-icon(icon="ion-close-round")
+            tbody(ng-controller="TableCtrl")
+              tr(ng-repeat="item in items track by $index")
+                td: input(ng-model="campos.elemento[$index].cantidad", ng-init="campos.elemento[$index].cantidad=item.cantidad").mdl-textfield__input 
+                td: input(ng-model="campos.elemento[$index].clave", ng-init="campos.elemento[$index].clave=item.clave").mdl-textfield__input 
+                td: input(ng-model="campos.elemento[$index].cantidadTransformado", ng-init="campos.elemento[$index].cantidadTransformado=item.cantidadTransformado").mdl-textfield__input 
+                td: input(ng-model="campos.elemento[$index].claveTransformado", ng-init="campos.elemento[$index].claveTransformado=item.claveTransformado").mdl-textfield__input 
+                td: input(ng-model="campos.elemento[$index].comentarioTransformado", ng-init="campos.elemento[$index].comentarioTransformado=item.comentarioTransformado").mdl-textfield__input 
+                td: a(href="#", ng-click="removeItem($index)"): ons-icon(icon="ion-close-round")
   
 
 
-ons-template(id="addItem.html")
-  ons-dialog(var="addItemDialog" cancelable)
-    ons-toolbar(inline)
-      .center Añadir nuevo
-    .m10.transformacion
-      p Producto origen
-      ons-row
-        ons-col: +input('cantidad', 'Cantidad')
-        ons-col: +input('clave', 'Clave')
-      p Producto transformado
-      ons-row
-        ons-col: +input('cantidadTransformado', 'Cantidad')
-        ons-col: +input('claveTransformado', 'Clave')
-      ons-row
-        ons-col: +input('comentarioTransformado', 'Comentario') 
-      ons-row
-        ons-col.text-center
-          button(type="button", ng-click="addItemDialog.hide()").mdl-button.mdl-js-button.mdl-button--colored
-            ons-icon(icon="ion-plus-round")
-            |  Añadir elemento
+    ons-template(id="addItem.html")
+      ons-dialog(var="addItemDialog" cancelable).transformacion
+        ons-toolbar(inline)
+          .center Añadir nuevo
+        form(action="#", ng-controller="DialogCtrl", ng-submit="submit()").m10.transformacion
+          p Producto origen
+          ons-row
+            ons-col: +input('cantidad', 'Cantidad')
+            ons-col: +input('clave', 'Clave', 'text', 'lateral_db_catalogos.html')
+          p Producto transformado
+          ons-row
+            ons-col: +input('cantidadTransformado', 'Cantidad')
+            ons-col: +input('claveTransformado', 'Clave', 'text', 'lateral_db_catalogos.html')
+          ons-row
+            ons-col: +input('comentarioTransformado', 'Comentario') 
+          ons-row
+            ons-col.text-center
+              button(type="button", ng-click="addItemDialog.hide()").mdl-button.mdl-js-button.mdl-button--colored
+                ons-icon(icon="ion-close")
+                |  Cancelar
+            ons-col.text-center
+              button(type="submit", ng-click="addItemDialog.hide()").mdl-button.mdl-js-button.mdl-button--colored
+                ons-icon(icon="ion-plus-round")
+                |  Añadir elemento
